--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -6,7 +6,7 @@
                 <div class="container dashboard">
                     <div class="employees">
                         <div class="employee-query components box-shadow">
-                            <h1> <a href="/admin/employees">Employees</a>  / Add employee</h1>
+                            <h1> <a href="/admin/employees">Employees</a> / Add employee</h1>
                             <div class="employee-query-search">
                                 <form novalidate role="search">
                                     <button>
@@ -16,17 +16,16 @@
                                 </form>
                             </div>
                         </div>
-                    <div class="employee-container box-shadow components">
-                        <div class="head">
-                            <div class="title">
-                                Add employee
+                        <div class="employee-container box-shadow components">
+                            <div class="head">
+                                <div class="title">
+                                    Add employee
+                                </div>
                             </div>
-                        </div>
-                        
-                        <div class="addemp-form">
-                            <form class="add-emp">
-                                <div class="add-emp-section">
-                                    <div>
+
+                            <div class="addemp-form">
+                                <form class="add-emp">
+                                    <div class="add-emp-section">
                                         <div>
                                             <label for="fullname">Full Name *</label>
                                             <input type="text" placeholder="Full Name" name="name" class="box-shadow">
@@ -37,8 +36,6 @@
                                             <input type="text" placeholder="ID No." name="emp_code" class="box-shadow">
                                             <label for="error" class="id-error error">a</label>
                                         </div>
-                                    </div>
-                                    <div>
                                         <div>
                                             <label for="rfid">RFID *</label>
                                             <input type="text" placeholder="RFID" name="rfid" class="box-shadow">
@@ -49,10 +46,6 @@
                                             <input type="text" placeholder="Age" name="age" class="box-shadow">
                                             <label for="error" class="age-error error">a</label>
                                         </div>
-                                        
-                                        
-                                    </div>
-                                    <div>
                                         <div>
                                             <label for="email">Email *</label>
                                             <input type="text" placeholder="Email" name="email" class="box-shadow">
@@ -63,12 +56,10 @@
                                             <input type="text" placeholder="Contact" name="contact" class="box-shadow">
                                             <label for="error" class="contact-error error">a</label>
                                         </div>
-                                        
-                                    </div>
-                                    <div>
                                         <div>
                                             <label for="position">Position *</label>
-                                            <input type="text" placeholder="Position" name="position" class="box-shadow">
+                                            <input type="text" placeholder="Position" name="position"
+                                                class="box-shadow">
                                             <label for="error" class="position-error error">a</label>
                                         </div>
                                         <div>
@@ -76,19 +67,15 @@
                                             <input type="text" placeholder="Salary" name="salary" class="box-shadow">
                                             <label for="error" class="salary-error error">a</label>
                                         </div>
-                                        
-                                        
                                     </div>
-                                </div>
-                                
-                                <div>
-                                    <button class="button-submit add-emp-btn">Save this employee</button>
-                                </div>
-                            </form>
-                            
+                                    <div class="submit">
+                                        <button class="button-submit add-emp-btn">Save this employee</button>
+                                    </div>
+                                </form>
+
+                            </div>
+
                         </div>
-                        
-                    </div>
                     </div>
                 </div>
             </main>
@@ -106,27 +93,27 @@
                     console.log('ASDASFAS')
                     e.preventDefault();
                     const doc = {
-                        name : form.name.value,
-                        emp_code : form.emp_code.value,
-                        rfid : form.rfid.value,
-                        age : form.age.value,
-                        email : form.email.value,
-                        contact : form.contact.value,
-                        position : form.position.value,
-                        salary : form.salary.value
+                        name: form.name.value,
+                        emp_code: form.emp_code.value,
+                        rfid: form.rfid.value,
+                        age: form.age.value,
+                        email: form.email.value,
+                        contact: form.contact.value,
+                        position: form.position.value,
+                        salary: form.salary.value
                     }
 
                     console.log(doc)
-                    const res = await fetch('http://localhost:3000/admin/api/employees',{
-                        headers: {'Content-Type': 'application/json'},
+                    const res = await fetch('http://localhost:3000/admin/api/employees', {
+                        headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(doc),
                         method: 'POST'
                     })
                     const data = await res.json()
 
-                    if(data.result) console.log(data.result)
+                    if (data.result) console.log(data.result)
                     console.log(data)
-                    if(data.err) {
+                    if (data.err) {
                         fnameErr.textContent = data.err.name
                         idErr.textContent = data.err.emp_code
                         rfidErr.textContent = data.err.rfid
@@ -136,7 +123,7 @@
                         positionErr.textContent = data.err.position
                         salaryErr.textContent = data.err.salary
                     }
-                    
+
                     console.log(data)
                 })
             </script>
