--- a/views/addHoliday.ejs
+++ b/views/addHoliday.ejs
@@ -23,61 +23,20 @@
                             </div>
                         </div>
                         
-                        <div class="addemp-form">
-                            <form class="add-emp">
-                                <div class="add-emp-section">
+                        <div class="add-holiday-form">
+                            <form class="add-holiday">
+                                <div class="add-holiday-section">
                                     <div>
-                                        <div>
-                                            <label for="fullname">Full Name *</label>
-                                            <input type="text" placeholder="Full Name" name="name" class="box-shadow">
-                                            <label for="error" class="fname-error error">a</label>
-                                        </div>
                                         <div>
                                             <label for="employeecode">ID No. (Employee Code) *</label>
                                             <input type="text" placeholder="ID No." name="emp_code" class="box-shadow">
                                             <label for="error" class="id-error error">a</label>
                                         </div>
-                                    </div>
-                                    <div>
                                         <div>
-                                            <label for="rfid">RFID *</label>
-                                            <input type="text" placeholder="RFID" name="rfid" class="box-shadow">
-                                            <label for="error" class="rfid-error error">a</label>
+                                            <label for="fullname">Full Name *</label>
+                                            <input type="text" placeholder="Full Name" name="name" class="box-shadow" disabled>
+                                            <label for="error" class="fname-error error">a</label>
                                         </div>
-                                        <div>
-                                            <label for="age">Age *</label>
-                                            <input type="text" placeholder="Age" name="age" class="box-shadow">
-                                            <label for="error" class="age-error error">a</label>
-                                        </div>
-                                        
-                                        
-                                    </div>
-                                    <div>
-                                        <div>
-                                            <label for="email">Email *</label>
-                                            <input type="text" placeholder="Email" name="email" class="box-shadow">
-                                            <label for="error" class="email-error error">a</label>
-                                        </div>
-                                        <div>
-                                            <label for="contact">Contact *</label>
-                                            <input type="text" placeholder="Contact" name="contact" class="box-shadow">
-                                            <label for="error" class="contact-error error">a</label>
-                                        </div>
-                                        
-                                    </div>
-                                    <div>
-                                        <div>
-                                            <label for="position">Position *</label>
-                                            <input type="text" placeholder="Position" name="position" class="box-shadow">
-                                            <label for="error" class="position-error error">a</label>
-                                        </div>
-                                        <div>
-                                            <label for="salary">Salary *</label>
-                                            <input type="text" placeholder="Salary" name="salary" class="box-shadow">
-                                            <label for="error" class="salary-error error">a</label>
-                                        </div>
-                                        
-                                        
                                     </div>
                                 </div>
                                 
