--- a/views/addEmployee.ejs
+++ b/views/addEmployee.ejs
@@ -23,9 +23,9 @@
                                 </div>
                             </div>
 
-                            <div class="addemp-form">
-                                <form class="add-emp">
-                                    <div class="add-emp-section">
+                            <div class="add">
+                                <form class="submit">
+                                    <div class="section">
                                         <div>
                                             <label for="fullname">Full Name *</label>
                                             <input type="text" placeholder="Full Name" name="name" class="box-shadow">
@@ -80,7 +80,7 @@
                 </div>
             </main>
             <script>
-                let form = document.querySelector('.add-emp')
+                let form = document.querySelector('.submit')
                 const fnameErr = document.querySelector('.fname-error')
                 const idErr = document.querySelector('.id-error')
                 const rfidErr = document.querySelector('.rfid-error')
